--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,7 +8,7 @@ on:
     branches:
       - main
   schedule:
-    - cron: '00 12 * * 1' # Runs every Monday at 8:00 AM EST
+    - cron: '*/10 * * * *' # Runs every Monday at 8:00 AM EST
 
 jobs:
   Test:
